general idea for a FAQ card

--- a/index.html
+++ b/index.html
@@ -12,18 +12,57 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-
-        </nav>
-    </header>
     <main>
-        <h1>Preston Jay</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, vero.</p>
+        <h1>FAQ</h1>
+        <div class='card'>
+            <div class='card-top'>
+                <p class='question'>What do you think of This?</p>
+                <span><</span>
+            </div>
+            <p class='answer'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint sequi facere, obcaecati voluptate ipsa temporibus!</p>
+            <i class="fa-regular fa-comments"></i>
+        </div>
+        <div class='card'>
+            <div class='card-top'>
+                <p class='question'>What do you think of This?</p>
+                <span><</span>
+            </div>
+            <p class='answer'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint sequi facere, obcaecati voluptate ipsa temporibus!</p>
+            <i class="fa-regular fa-comments"></i>
+        </div>
+        <div class='card'>
+            <div class='card-top'>
+                <p class='question'>What do you think of This?</p>
+                <span><</span>
+            </div>
+            <p class='answer'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint sequi facere, obcaecati voluptate ipsa temporibus!</p>
+            <i class="fa-regular fa-comments"></i>
+        </div>
+        <div class='card'>
+            <div class='card-top'>
+                <p class='question'>What do you think of This?</p>
+                <span><</span>
+            </div>
+            <p class='answer'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint sequi facere, obcaecati voluptate ipsa temporibus!</p>
+            <i class="fa-regular fa-comments"></i>
+        </div>
+        <div class='card'>
+            <div class='card-top'>
+                <p class='question'>What do you think of This?</p>
+                <span><</span>
+            </div>
+            <p class='answer'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint sequi facere, obcaecati voluptate ipsa temporibus!</p>
+            <i class="fa-regular fa-comments"></i>
+        </div>
+        <div class='card'>
+            <div class='card-top'>
+                <p class='question'>What do you think of This?</p>
+                <span><</span>
+            </div>
+            <p class='answer'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint sequi facere, obcaecati voluptate ipsa temporibus!</p>
+            <i class="fa-regular fa-comments"></i>
+        </div>
     </main>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
